--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Partilha os teus ficheiros!">
+        <meta name="description" content="Partilha os seus ficheiros!">
         <meta name="author" content="Daniel Nunes">
         <meta name="keywords" content="TGPSI Share">
         <link rel="stylesheet" href="https://tgpsi-share.netlify.app/assets/style.css">
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div>
-            <img src="https://tgpsi-share.netlify.app/assets/load.gif">
+            <img src="https://tgpsi-share.netlify.app/assets/load.gif" alt="Aguarde...">
             <h1>Aguarde</h1>
             <p>A redirecionar para a Página Principal...</p>
         </div>
