--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Partilha os teus ficheiros!">
+        <meta name="description" content="Partilha os seus ficheiros!">
         <meta name="author" content="Daniel Nunes">
         <meta name="keywords" content="TGPSI Share">
         <link rel="stylesheet" href="./assets/style.css">
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div>
-            <img src="./assets/dl.png">
+            <img src="./assets/dl.png" alt="Aguarde...">
             <h1>Tudo Pronto!</h1>
             <p>Está tudo pronto para começar a partilhar os seus ficheiros!</p>
             <button>Transferir</button>
