--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
         <meta name="description" content="Partilha os seus ficheiros!">
         <meta name="author" content="Daniel Nunes">
         <meta name="keywords" content="TGPSI Share">
+        <meta name="unsplash" content="MkmaXl5HCFr1psAbRtB_LBIFirxvm2jBBd6whLChuWo">
         <link rel="stylesheet" href="./assets/style.css">
         <link rel="icon" href="./assets/logo.png">
         <title>TGPSI Share</title>
     </head>
     <body>
         <div id="card">
-            <img src="./assets/dl.png" alt="Transferir">
-            <h1>Tudo Pronto!</h1>
-            <p>Está tudo pronto para começar a partilhar os seus ficheiros!</p>
-            <button>Transferir</button>
+            <div id="homePanel">
+                <img src="./assets/dl.png" alt="Transferir">
+                <h1>Tudo Pronto!</h1>
+                <p>Está tudo pronto para começar a partilhar os seus ficheiros!</p>
+                <button>Transferir</button>
+            </div>
+            <div id="downloadPanel">
+                <img src="./assets/load.gif" alt="Wait">
+                <h1>A Transferir</h1>
+                <p>O TGPSI Share deve abrir dentro de momentos...</p>
+            </div>
         </div>
         <a id="attribution" href="./" target="_blank">Unsplash <hr>Tirada por:&nbsp;<span>A Carregar...</span></a>
         <script src="./assets/home.js"></script>
