--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </head>
     <body>
         <div id="card">
-            <div id="homePanel">
+            <div id="homePanel" style="display: block; opacity: 1;">
                 <img src="./assets/dl.png" alt="Transferir">
                 <h1>Tudo Pronto!</h1>
                 <p>Está tudo pronto para começar a partilhar os seus ficheiros!</p>
                 <button>Transferir</button>
             </div>
-            <div id="downloadPanel">
+            <div id="downloadPanel" style="display: none; opacity: 0;">
                 <img src="./assets/load.gif" alt="Wait">
                 <h1>A Transferir</h1>
                 <p>O TGPSI Share deve abrir dentro de momentos...</p>
